InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsurableItem__c/vlocity_ins__InsurableItem__c.object-meta.xml
<CustomObject>
    <description>Represents an item owned by a Lead or Account such as a house, automobile, boat or other property which is an item that may need insurance coverage. Insurable Items are used to remember the details of a client&apos;s property so that future quotes can be generated quickly.</description>
    <label>Insurable Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurable Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>