InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsurableItem__c/fields/vlocity_ins__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurable Items</relationshipLabel>
    <relationshipName>InsurableItems</relationshipName>
    <type>Lookup</type>
</CustomField>