InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsurableItem__c/fields/vlocity_ins__SpecDescription__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SpecDescription__c</fullName>
    <formula>vlocity_ins__SpecProduct2Id__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spec Description</label>
    <type>Text</type>
</CustomField>