InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsurableItem__c/fields/vlocity_ins__SpecPricingSource__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SpecPricingSource__c</fullName>
    <formula>vlocity_ins__SpecProduct2Id__r.vlocity_ins__PricingSource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spec Product Spec Pricing Source</label>
    <type>Text</type>
</CustomField>