InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsurableItem__c/fields/vlocity_ins__SpecProduct2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SpecProduct2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spec Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Insurable Items</relationshipLabel>
    <relationshipName>InsurableItems</relationshipName>
    <type>Lookup</type>
</CustomField>