InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsurableItem__c/fields/vlocity_ins__SpecProductName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SpecProductName__c</fullName>
    <formula>vlocity_ins__SpecProduct2Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spec Product Name</label>
    <type>Text</type>
</CustomField>