InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsurableItem__c/listViews/vlocity_ins__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__AccountId__c</columns>
    <columns>vlocity_ins__AttributeSelectedValues__c</columns>
    <columns>vlocity_ins__SpecProductName__c</columns>
    <columns>vlocity_ins__SpecDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>